test/acceptance/parsing/failing/assert-windowCount-equals-string.spun
get "http://google.com"

assert windowCount equals "asdfasdf"
